some little fixes

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
@@ -4,12 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Viewing and editing a project's build path</title>
+<title>Viewing and editing a project's build class path</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Viewing and editing a project's build path</H1>
+<H1 CLASS="Head"> Viewing and editing a project's build class path</H1>
 <P CLASS="Para">
 A project's build class path can either be defined when creating the project with the New wizard or later in the project's property dialog. The build path settings dialog is the same in both cases. To view and edit a project's build path, follow these steps:</P>
 <ol>
@@ -22,12 +21,11 @@ Select the project you want to view or edit.</P>
 From the project's pop-up menu, select <b>Properties</b>. </P>
   </li>
   <li>
-<P CLASS="Para">
-Select the Java Build Path page. </P>
+    <P CLASS="Para"> Select the <strong>Java Build Path</strong> page. </P>
   </li>
   <li>
-<P CLASS="Para">
-On the Source page, define the source entries for the build path.</P>
+    <P CLASS="Para"> On the <strong>Source</strong> page, define the source entries 
+      for the build path.</P>
   </li>
 <LI CLASS="Item">
 Click the <b> <SPAN CLASS="Label">
@@ -49,17 +47,18 @@ On the Projects page, identify the other projects that are required for building
 <b>Note</b>:	Each selected project is automatically added to the list of referenced projects.</P>
   </li>
   <li>
-<P CLASS="Para">
-On the Libraries page, define the libraries required by your project.
-Libraries come in different forms. There are buttons for adding a library in each form.</P>
+    <P CLASS="Para"> On the <strong>Libraries</strong> page, define the libraries 
+      required by your project. Libraries come in different forms. There are buttons 
+      for adding a library in each form.</P>
   </li>
   <li>
 <P CLASS="Para">
 By default, each Java project has a JRE_LIB entry on the build path. This entry stands for the runtime JAR file for the workbench's default JRE. </P>
   </li>
   <li>
-<P CLASS="Para">
-On the Ordering page, define the build class path order. The recommended ordering is to have source entries before the library entries and the required projects.</P>
+    <P CLASS="Para"> On the <b>Order and Export</b> page, define the build class 
+      path order. The recommended ordering is to have source entries before the 
+      library entries and the required projects.</P>
   </li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
