--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
@@ -8,41 +8,33 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Adding a library folder to the build path</H1>
-<P CLASS="Para">
-A library folder is an ordinary folder containing a collection of class files inside the workbench. Use this format for a library when a library is not packaged as a JAR file.</P>
-<P CLASS="Para">
-<b>Note</b>: You cannot attach source to a library folder.</P>
-<P CLASS="Para">
-To add a library folder to the project's build class path, follow these steps:</P>
 <ol>
-  <li>
-<P CLASS="Para">
-Select the project, and from its context menu, select <b>Properties</b>.</P>
+  <li> 
+    <H1 CLASS="Head"> Adding a library folder to the build path</H1>
   </li>
-  <li>
-<P CLASS="Para">
-In the Properties dialog, select the Java Build Path page. </P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click the <b>Libraries</b> tab.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click <b> <SPAN CLASS="Label">
-Create Folder</SPAN></b>
- to add a new, empty folder to the build class path. You can then import class files later.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click <b> <SPAN CLASS="Label">
-Add Folders</SPAN></b>
- to add existing workbench folders to the build class path.</P>
-  </li>
+  <li> A library folder is an ordinary folder containing a collection of class 
+    files inside the workbench. Use this format for a library when a library is 
+    not packaged as a JAR file. <br>
+    <b>Note</b>: You cannot attach source to a library folder.</li>
+  <li> </li>
 </ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+<p>To add a library folder to the project's build class path, follow these steps:</p>
+<ol>
+  <li> Select the project, and from its context menu, select <b>Properties</b>.</li>
+  <li> In the Properties dialog, select the <b>Java Build Path</b> page. </li>
+  <li> Click the <b>Libraries</b> tab.</li>
+  <li>Click the<b> Advanced </b>button.</li>
+  <li>In the dialog that shows up, select the <b>Create New Class Folder</b> and 
+    press the <b>OK</b> button.</li>
+  <li>In the resulting dialog, enter the name for the library folder and press 
+    the <b>OK</b> button.</li>
+</ol>
+<p>To add an existing class folder, select <strong>Add Existing Class Folder</strong> 
+  instead of <b>Create New Class Folder</b> in the steps outlined above and select 
+  the folder in the dialog that shows up after you press <strong>OK</strong>.</p>
+<ol>
+  <li><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></li>
+</ol>
 <p><a href="../concepts/concepts-4.htm">Java builder</a><br>
 <a href="../concepts/cbuildcp.htm">Build class path</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
