--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
@@ -15,26 +15,23 @@ You can add a JAR file stored either in the workbench or anywhere in your file s
 <P CLASS="Para">
 To add a JAR to your build class path follow these steps:</P>
 <ol>
-  <li>
-<P CLASS="Para">
-Select the project, and from its pop-up menu, select <b>Properties</b>.</P>
+  <li> 
+    <P CLASS="Para"> Select the project, and from its pop-up menu, select <b>Properties</b>.</P>
   </li>
-  <li>
-<P CLASS="Para">
-In the Properties dialog, select the Java Build Path page. </P>
+  <li> 
+    <P CLASS="Para"> In the Properties dialog, select the <b>Java Build Path</b> 
+      page. </P>
   </li>
-  <li>
-<P CLASS="Para">
-Click the <b>Libraries</b> tab.</P>
+  <li> 
+    <P CLASS="Para"> Click the <b>Libraries</b> tab.</P>
   </li>
-  <li>
-<P CLASS="Para">
-Click the <b> <SPAN CLASS="Label">
-Add JARs</SPAN></b> button for adding a workbench internal JAR file, or click the
-<b> <SPAN CLASS="Label">
-Add External JARs</SPAN></b>
- button for adding a JAR file stored on the file system.</P>
+  <li> 
+    <P CLASS="Para"> Click the <b> <SPAN CLASS="Label"> Add JARs</SPAN></b> button 
+      for adding a workbench internal JAR file, or click the <b> <SPAN CLASS="Label"> 
+      Add External JARs</SPAN></b> button for adding a JAR file stored on the 
+      file system.</P>
   </li>
+  <li>In the dialog that shows up, select the JAR that you want to add.</li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-4.htm">Java builder</a><br>
