Fixed (x)html errors

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -36,7 +36,7 @@
           Then click <span class="Label">Next</span>.
         </p>
 
-        <P class="Para">
+        <p class="Para">
           In the <span class="Label">Project name</span> field,
           type &quot;JUnit&quot;, then click
           <span class="Label">Finish</span>.
@@ -75,8 +75,7 @@
         <p class="Para">
           Click the <span class="Label">Browse</span>
           button next to the <span class="Label">Zip file</span>
-          field and browse to select &lt;workbenchRoot&gt;/plugins/<BR>
-org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
+          field and browse to select &lt;workbenchRoot&gt;/plugins/org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
         </p>
       </li>
 
