--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -31,7 +31,7 @@ file and drag it into the&nbsp;<span CLASS="Filename">junit.framework</span>
 package. The file is moved, and its package declaration changes to reflect
 the new location.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-44.gif" NOSAVE height=183 width=466></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-44.gif" alt="" height=183 width=466></div>
 </td>
 </tr>
 
@@ -46,7 +46,7 @@ file and drag it into the root directory of the JUnit project. A default
 package is created to contain the class, and the package declaration is
 removed to reflect its new location.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-45.gif" NOSAVE height=160 width=506></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-45.gif" alt="" height=160 width=506></div>
 </td>
 </tr>
 
@@ -65,7 +65,7 @@ Select the&nbsp;<span CLASS="Filename">junit.framework</span> package,
 then click&nbsp;<span CLASS="Label">OK</span>. The class is moved, and
 its package declaration is updated to the new location.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-46.gif" NOSAVE height=415 width=346></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-46.gif" alt="" height=415 width=346></div>
 
 <div CLASS="Note">
 <div CLASS="Para">Note: This example did not result in compile errors.
