Fixed (x)html errors

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -58,7 +58,7 @@ File name</SPAN>
 MyScrap</SPAN>. The JPAGE file extension will be added automatically, if you do not enter it yourself.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-77.gif">
+<IMG SRC="../images/qs-77.gif" alt="">
 </DIV>
 </DIV>
 <P CLASS="Para">
@@ -78,7 +78,7 @@ Finish</SPAN>
 The scrapbook page opens in an editor in the editor area. </P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-78.gif">
+<IMG SRC="../images/qs-78.gif" alt="">
 </DIV>
 </DIV>
 </TD>
@@ -97,7 +97,7 @@ System.get</SPAN>
 System.getProperties()</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-79.gif">
+<IMG SRC="../images/qs-79.gif" alt="">
 </DIV>
 </DIV>
 </TD>
@@ -114,7 +114,7 @@ Select the entire line you just typed and select <SPAN CLASS="Label">
 Display from the context menu (or select the equivalent item the editor toolbar or Run menu).</SPAN></P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-80.gif">
+<IMG SRC="../images/qs-80.gif" alt="">
 </DIV>
 </DIV>
 </TD>
