--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -51,7 +51,7 @@ in the editor from the Package Explorer view.</div>
 of the first line in the file (<span CLASS="Filename"> package junit.framework;</span>
 ).</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-34.gif" NOSAVE height=108 width=288></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-34.gif" alt="" height=108 width=288></div>
 </td>
 </tr>
 
@@ -95,7 +95,7 @@ In the editor, a problem marker is displayed near the affected line</li>
 The editor tabs will also be annotated with a problem marker</li>
 </ul>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-35.gif" NOSAVE height=225 width=404></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-35.gif" alt="" height=225 width=404></div>
 </td>
 </tr>
 
@@ -108,7 +108,7 @@ The editor tabs will also be annotated with a problem marker</li>
 <div CLASS="Para">You can hover over the problem marker in the marker bar
 to view a description of the problem.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-36.gif" NOSAVE height=148 width=307></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-36.gif" alt="" height=148 width=307></div>
 </td>
 </tr>
 
@@ -133,7 +133,7 @@ on the editor's tab to close the editor.</div>
 its context menu and select Go To. The file is opened in the editor at
 the location of the problem.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-37.gif" NOSAVE height=350 width=408></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-37.gif" alt="" height=350 width=408></div>
 </td>
 </tr>
 
@@ -178,7 +178,7 @@ will scroll to this method.</td>
 
 <td>On the marker bar a light bulb marker appears. The light bulb signals
 that correction proposals are available for this problem.
-<br><img SRC="../images/qs-37a.gif" NOSAVE height=186 width=502></td>
+<br><img SRC="../images/qs-37a.gif" alt="" height=186 width=502></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -189,7 +189,7 @@ that correction proposals are available for this problem.
 <td>Set the cursor inside the marked range and choose&nbsp;<span CLASS="Label">Quick
 Fix</span> from the Edit menu bar. You can also press CTRL + 1 or left
 click the light bulb. A selection dialog appears with possible corrections.
-<br><img SRC="../images/qs-37b.gif" NOSAVE height=304 width=750></td>
+<br><img SRC="../images/qs-37b.gif" alt="" height=304 width=750></td>
 </tr>
 
 <tr VALIGN=TOP>
