--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -67,7 +67,7 @@ field.</div>
 
 <div CLASS="Para">In the&nbsp;<span CLASS="Label">Name</span> field, type&nbsp;<span CLASS="Filename">MyTestCase</span>.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-41.gif" NOSAVE height=540 width=493></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-41.gif" alt="" height=540 width=493></div>
 </td>
 </tr>
 
@@ -92,7 +92,7 @@ next to the&nbsp;<span CLASS="Label">Superclass</span> field.</div>
 field in the Superclass Selection dialog, type&nbsp;<span CLASS="Filename">Test</span>
 to narrow the list of available superclasses.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-42.gif" NOSAVE height=468 width=296></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-42.gif" alt="" height=468 width=296></div>
 </td>
 </tr>
 
@@ -127,7 +127,7 @@ superclass</span> checkbox.</div>
 <div CLASS="Para">Click&nbsp;<span CLASS="Label">Finish</span> to create
 the new class.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-43.gif" NOSAVE height=540 width=493></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-43.gif" alt="" height=540 width=493></div>
 </td>
 </tr>
 
@@ -149,7 +149,7 @@ Java > Templates and edit the templates 'filecomment' and 'typecomment'.</td>
 
 <td>In the Outline view select the new class&nbsp;<span CLASS="Filename">MyTestCase</span>.
 Open the context menu and select&nbsp;<span CLASS="Label">Override Methods...</span>.
-<br><img SRC="../images/qs-43a.gif" NOSAVE height=247 width=276></td>
+<br><img SRC="../images/qs-43a.gif" alt="" height=247 width=276></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -158,7 +158,7 @@ Open the context menu and select&nbsp;<span CLASS="Label">Override Methods...</s
 <td>In the Override Methods dialog, check 'setUp()' and 'tearDown()' and
 click&nbsp;<span CLASS="Label">OK</span>. Two methods are added to the
 class.
-<br><img SRC="../images/qs-43b.gif" NOSAVE height=447 width=211></td>
+<br><img SRC="../images/qs-43b.gif" alt="" height=447 width=211></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -175,10 +175,10 @@ they cannot be resolved. A light bulb appears on the marker bar.
 <br>Set the cursor inside 'Vector' and&nbsp; press CTRL + 1 (or use Edit
 > Quick Fix from the menu bar).
 <br>Choose 'Import java.util.Vector'. This adds the missing import declaration.
-<br><img SRC="../images/qs-43c.gif" NOSAVE height=287 width=831>
+<br><img SRC="../images/qs-43c.gif" alt="" height=287 width=831>
 <br>Set the cursor inside 'container' and press CTRL + 1. Choose 'Create
 field container' to add the new field.
-<br><img SRC="../images/qs-43d.gif" NOSAVE height=287 width=831></td>
+<br><img SRC="../images/qs-43d.gif" alt="" height=287 width=831></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -187,7 +187,7 @@ field container' to add the new field.
 <td>In the Outline view, select the class&nbsp;<span CLASS="Filename">MyTestCase</span>.
 Open the context menu and select&nbsp;<span CLASS="Label">Generate Getter
 and Setter...</span>.
-<br><img SRC="../images/qs-43e.gif" NOSAVE height=275 width=321></td>
+<br><img SRC="../images/qs-43e.gif" alt="" height=275 width=321></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -196,7 +196,7 @@ and Setter...</span>.
 <td>The Generate Getter and Setter dialog suggests creating the methods
 getContainer and setContainer. Select both and click&nbsp;<span CLASS="Label">OK</span>.
 A Getter and Setter for the field container are added.
-<br><img SRC="../images/qs-43f.gif" NOSAVE height=248 width=276></td>
+<br><img SRC="../images/qs-43f.gif" alt="" height=248 width=276></td>
 </tr>
 
 <tr VALIGN=TOP>
