--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -64,7 +64,7 @@ area, select&nbsp;<span CLASS="Label">Method</span>, and in the Limit To
 area, select&nbsp;<span CLASS="Label">References</span>.
 <br>Verify that the Scope is set to&nbsp;<span CLASS="Label">Workspace</span>.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-47.gif" NOSAVE height=387 width=488></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-47.gif" alt="" height=387 width=488></div>
 
 <div CLASS="Para">Then click&nbsp;<span CLASS="Label">Search</span>. While
 searching&nbsp; you may click&nbsp;<span CLASS="Label">Cancel</span> at
@@ -81,7 +81,7 @@ any time to stop the search. Partial results will be shown.</div>
 <div CLASS="Para">In the Java perspective, the Search view shows the search
 results.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-48.gif" NOSAVE height=138 width=346></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-48.gif" alt="" height=138 width=346></div>
 
 <div CLASS="Para">Use the&nbsp;<span CLASS="Label">Show Next Match</span>
 and&nbsp;<span CLASS="Label">Show Previous Match</span> buttons to navigate
@@ -100,7 +100,7 @@ open, it is opened in an editor.</div>
 Search view buttons, the file opens in the editor at the position of the
 match. Search matches are tagged with a search marker in the marker bar.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-49.gif" NOSAVE height=342 width=294></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-49.gif" alt="" height=342 width=294></div>
 </td>
 </tr>
 </table>
@@ -137,7 +137,7 @@ to open it in an editor.</div>
 <div CLASS="Para">In the Outline view, select the fail(String) method,
 and from its context menu, select References > Workspace.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-50.gif" NOSAVE height=274 width=533></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-50.gif" alt="" height=274 width=533></div>
 </td>
 </tr>
 </table>
@@ -151,7 +151,7 @@ From an editor</h2>
 In the editor, select the class name&nbsp;<span CLASS="Filename">TestCase</span>
 and from the context menu, select Search > References > Workspace.</div>
 
-<div CLASS="Figure"><img SRC="../images/qs-52.gif" NOSAVE height=468 width=598>
+<div CLASS="Figure"><img SRC="../images/qs-52.gif" alt="" height=468 width=598>
 <div CLASS="FigureTitle">&nbsp;</div>
 </div>
 </div>
@@ -164,7 +164,7 @@ From the search view</h2>
 search. Select a search result and open the context menu. You can continue
 searching the selected element's references and declarations.</div>
 
-<div CLASS="Figure"><img SRC="../images/qs-53.gif" NOSAVE height=312 width=451>
+<div CLASS="Figure"><img SRC="../images/qs-53.gif" alt="" height=312 width=451>
 <div CLASS="FigureTitle">&nbsp;</div>
 </div>
 </div>
@@ -211,7 +211,7 @@ name patterns</span> field, make sure that is set to&nbsp;<span CLASS="Filename"
 The Scope should be set to&nbsp;<span CLASS="Filename">Workspace</span>.
 <br>Then click&nbsp;<span CLASS="Label">Search</span>.&nbsp;</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-54.gif" NOSAVE height=387 width=488></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-54.gif" alt="" height=387 width=488></div>
 </td>
 </tr>
 
@@ -233,7 +233,7 @@ Search Results</span> button to see a menu containing the list of the most
 recent searches. The list can be cleared by invoking&nbsp;<span CLASS="Label">Clear
 History</span> from this menu.</div>
 
-<div CLASS="Figure"><img SRC="../images/qs-55.gif" NOSAVE height=249 width=669>
+<div CLASS="Figure"><img SRC="../images/qs-55.gif" alt="" height=249 width=669>
 <div CLASS="FigureTitle">&nbsp;</div>
 </div>
 
@@ -241,7 +241,7 @@ History</span> from this menu.</div>
 button will display a dialog with the list of all previous searches from
 the current session.</div>
 
-<div CLASS="Figure"><img SRC="../images/qs-56.gif" NOSAVE height=327 width=319>
+<div CLASS="Figure"><img SRC="../images/qs-56.gif" alt="" height=327 width=319>
 <div CLASS="FigureTitle">&nbsp;</div>
 </div>
 
