--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -46,7 +46,7 @@ fFull.addElement (new Integer(1));</SPAN>
  and double-click to set a breakpoint. </P>
 <DIV CLASS="Figure">
 <DIV>
-<IMG SRC="../images/qs-68.gif">
+<IMG SRC="../images/qs-68.gif" alt="">
 </DIV>
 <P CLASS="FigureTitle">
 Adding a Breakpoint</P>
@@ -84,7 +84,7 @@ VectorTest - junit.samples - /JUnit</SPAN>
 Finish</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-69.gif">
+<IMG SRC="../images/qs-69.gif" alt="">
 </DIV>
 </DIV>
 </TD>
@@ -100,7 +100,7 @@ Finish</SPAN>.</P>
 As soon as the breakpoint is hit, the Debug perspective opens, and execution is suspended. Notice that the process is still active (not terminated) in the Debug view. Other threads might still be running.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-70.gif">
+<IMG SRC="../images/qs-70.gif" alt="">
 </DIV>
 </DIV>
 <DIV CLASS="Note">
@@ -121,7 +121,7 @@ In the editor in the Debug perspective, select the entire line where the breakpo
 Inspect</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-71.gif">
+<IMG SRC="../images/qs-71.gif" alt="">
 </DIV>
 </DIV>
 </TD>
@@ -153,7 +153,7 @@ The Variables view displays the values of the variables in the selected stack fr
 Expand the fFull tree in the Variables view until you can see elementCount.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-72.gif">
+<IMG SRC="../images/qs-72.gif" alt="">
 </DIV>
 </DIV>
 </TD>
@@ -174,7 +174,7 @@ Step Over</SPAN>
 in the color specified in the Debug Variable Views "Changed Variable Value Color" preference (default color is red).
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-73.gif">
+<IMG SRC="../images/qs-73.gif" alt="">
 </DIV>
 </DIV>
 </TD>
