--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -40,7 +40,7 @@ by using drag and drop by dropping TestCase.java to an open hierarchy view.</li>
 </ul>
 </div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-28.gif" NOSAVE height=302 width=306></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-28.gif" alt="" height=302 width=306></div>
 </td>
 </tr>
 
@@ -56,7 +56,7 @@ the base classes and subclasses.
 <br>The small arrow on the left side of the type icon of TestCase indicates
 that the hierarchy was opened on this type.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-29.gif" NOSAVE height=156 width=229></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-29.gif" alt="" height=156 width=229></div>
 </td>
 </tr>
 
@@ -71,7 +71,7 @@ Hierarchy</span> button to see a hierarchy showing the type's parent elements
 including implemented interfaces,&nbsp; i.e., the results of going up the
 type hierarchy.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-30.gif" NOSAVE height=264 width=240></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-30.gif" alt="" height=264 width=240></div>
 
 <div CLASS="Para">In this "reversed hierarchy" view, you can see that TestCase
 implements the Test interface.</div>
@@ -87,7 +87,7 @@ implements the Test interface.</div>
 <div CLASS="Para">Click the&nbsp;<span CLASS="Label">Show the Subtype Hierarchy</span>
 button in the view toolbar.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-31.gif" NOSAVE height=120 width=240></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-31.gif" alt="" height=120 width=240></div>
 </td>
 </tr>
 
@@ -103,7 +103,7 @@ the runTest() method in the method pane.</div>
 
 <div CLASS="Para">The view will now show all the types implementing runTest().</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-32.gif" NOSAVE height=556 width=262></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-32.gif" alt="" height=556 width=262></div>
 </td>
 </tr>
 
@@ -117,7 +117,7 @@ the runTest() method in the method pane.</div>
 the Supertype Hierarchy</span> button. Then in the list pane, select countTestCases()
 to display the places where this method is overridden.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-33.gif" NOSAVE height=254 width=269></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-33.gif" alt="" height=254 width=269></div>
 </td>
 </tr>
 
@@ -146,7 +146,7 @@ from its context menu.</div>
 <div CLASS="Para">A hierarchy is opened containing all classes of the package.
 For completion of the tree, the hierarchy also shows some classes from
 other packages. These types are shown by a type image with a white fill.&nbsp;
-<br><img SRC="../images/qs-33a.gif" NOSAVE height=226 width=263></div>
+<br><img SRC="../images/qs-33a.gif" alt="" height=226 width=263></div>
 </td>
 </tr>
 
@@ -156,7 +156,7 @@ other packages. These types are shown by a type image with a white fill.&nbsp;
 <td>Use&nbsp;<span CLASS="Label">Previous Hierarchy Inputs</span> to go
 back to a previously opened element. Click on the arrow next to the button
 to see a menu or click on the button to edit the history list.
-<br><img SRC="../images/qs-33b.gif" NOSAVE height=226 width=263></td>
+<br><img SRC="../images/qs-33b.gif" alt="" height=226 width=263></td>
 </tr>
 
 <tr>
