--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -54,7 +54,7 @@ without changing its semantic behavior.</div>
 field in the Rename Compilation Unit dialog, type "<span CLASS="Filename">
 MyTestCase</span> ", then click&nbsp;<span CLASS="Label">Next</span>.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-38.gif" NOSAVE height=331 width=608></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-38.gif" alt="" height=331 width=608></div>
 </td>
 </tr>
 
@@ -72,7 +72,7 @@ choose to rename this resource.&nbsp;</div>
 in other compilation units; therefore, a simple rename operation is not
 sufficient in this case and would result in compile errors.&nbsp;</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-39.gif" NOSAVE height=509 width=608></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-39.gif" alt="" height=509 width=608></div>
 </td>
 </tr>
 
@@ -111,7 +111,7 @@ all proposed changes.</div>
 <div CLASS="Para">In the menu bar, select Refactor > Undo Rename TestCase.java
 to MyTestCase.java.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-40.gif" NOSAVE height=235 width=437></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-40.gif" alt="" height=235 width=437></div>
 </td>
 </tr>
 
