--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
@@ -9,10 +9,17 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Search</H1>
-<P>&nbsp;<br>
-
-  <img src=" ../ngibmcpy.gif"> </P>
-
+To search for methods with a certain return type:
+<ol>
+  <li>Open the search dialog</li>
+  <li>Switch to <strong>Java Search</strong> tab</li>
+  <li>Type in the search expression: '* X' (without the quotes, and with a space 
+    between the wild-card and X, where X is your return type)</li>
+  <li>Select <strong>Method</strong> and <strong>Declarations</strong></li>
+  <li>Use a working set to make the search faster.</li>
+  <li>Press <strong>Search</strong> <br>
+    <img src=" ../ngibmcpy.gif"> </li>
+</ol>
 <p></P>
 
 
