*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -22,6 +22,8 @@ method, which reports results to an  <b><a href="../reference/api/org/eclipse/jd
 
 <H3>
 Preparing for search</h3>
+<P>
+A search operation will use both a pattern for describing the nature of the search, and a scope for restraining the range of investigation. </P>
 
 <H4>
 Creating a java search pattern
@@ -46,6 +48,24 @@ Or creating a search pattern for searching for declarations of all types startin
     // Create search pattern
     ISearchPattern pattern = SearchEngine.createSearchPattern("Obj*", IJavaSearchConstants.TYPE, IJavaSearchConstants.DECLARATIONS, true);
 </pre></font>
+<P>
+The following search patterns are supported:
+<ul>
+<li>Package declarations</li>
+<li>Type declarations</li>
+<li>Field declarations</li>
+<li>Method (and constructor) declarations</li>
+<li>Package references</li>
+<li>Type references</li>
+<li>Interface implementors</li>
+<li>Field references</li>
+<li>Field write accesses</li>
+<li>Field read accesses</li>
+<li>Method (and constructor) references</li>
+<li>Combinations of the above patterns using the OR pattern (see
+<b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createOrSearchPattern(org.eclipse.jdt.core.search.ISearchPattern, org.eclipse.jdt.core.search.ISearchPattern)">createOrSearchPattern</a></b>)</li>
+</ul>
+</P>
 
 <H4>
 Creating a java search scope
