reviewed by [SI]

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -72,7 +72,7 @@ or the selected class in the Navigator, as a local Java application.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Notice that the program is run and the following message appears in the Console view telling you that the program needs an execution argument.</P>
+Notice that the program has run and the following message appears in the Console view telling you that the program needs an execution argument.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-60.gif" alt="">
@@ -181,7 +181,7 @@ Relaunch</SPAN>
 <P CLASS="Para">
 Select the drop-down menu from the <SPAN CLASS="Label">
 Run</SPAN>
- button in the workbench toolbar. This list contains the previously-launched configurations. Configurations can
+ button in the workbench toolbar. This list contains the previously launched configurations. Configurations can
  be relaunched by selecting them in this history list as well.</P>
 <DIV CLASS="Snapshot">
 <DIV>
