--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -44,12 +44,10 @@ fFull.addElement (new Integer(1));</SPAN>
 </P>
 <P CLASS="Para">
  and double-click to set a breakpoint. </P>
-<DIV CLASS="Figure">
+<DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-68.gif" alt="">
+<IMG SRC="../images/qs-68.gif" alt="Adding a Breakpoint">
 </DIV>
-<P CLASS="FigureTitle">
-Adding a Breakpoint</P>
 </DIV>
 <DIV CLASS="Note">
 <P CLASS="Para">
@@ -165,7 +163,7 @@ Expand the fFull tree in the Variables view until you can see elementCount.</P>
 </P>
 </TD><TD valign="top" align="left">
 <P CLASS="Para">
-Watch the variables (e.g., elementCount) in the Variables view as you do the following in the Debug view to step through VectorTest:</P>
+Watch the variables (e.g., elementCount) in the Variables view as you step through VectorTest in the Debug view:</P>
 <P CLASS="Para">
 Click the <SPAN CLASS="Label">
 Step Over</SPAN>
