--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -387,15 +387,9 @@ assert</pre>
         </p>
       </li>
 
-    <li>
-        <p class="Para">
-          Add the following method:
-        </p>
-      </li>
-
       <li>
         <p class="Para">
-          Start adding a new metod by typing the following:
+          Start adding a new method by typing the following:
         </p>
 
         <pre class="Code">public void testValues() {
