renamed key tag to kbd

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
@@ -22,7 +22,7 @@
       </li>
 
       <li>
-        Invoke content assist by pressing <key>Ctrl</key>+<key>Space</key>.
+        Invoke content assist by pressing <kbd>Ctrl</kbd>+<kbd>Space</kbd>.
       </li>
       <li>
         Templates show up in the presented list. Note that the list is filtered
