--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
@@ -17,7 +17,7 @@
 
     <ol>
       <li>Optionally, select some text in a text (or Java) editor </li>
-      <li>Press <key>Ctrl</key>+<key>F</key> or</li>
+      <li>Press <kbd>Ctrl</kbd>+<kbd>F</kbd> or</li>
       <li>From the menu bar, select <span class="Label">Edit &gt; Find / Replace</span></li>
     </ol>
 
