--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
@@ -17,7 +17,7 @@
 
     <ol>
       <li>
-        In the text (or Java) editor, press <key>Ctrl</key>+<key>J</key> or select
+        In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>J</kbd> or select
         <span class="Label">Edit &gt; Incremental Find</span> from the menu bar
       </li>
 
@@ -33,7 +33,7 @@
     </ol>
 
     <p class="Para">
-      You can leave the Incremental Find mode by pressing <key>Esc</key>.
+      You can leave the Incremental Find mode by pressing <kbd>Esc</kbd>.
     </p>
 
     <div class="copyright">
