--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-187.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-187.htm
@@ -17,7 +17,7 @@
 
     <ol>
       <li>
-        In the text (or Java) editor, press <key>Ctrl</key>+<key>K</key> or select
+        In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>K</kbd> or select
         <span class="Label">Edit &gt; Find Next</span> from the menu bar.
       </li>
       <li>
@@ -31,7 +31,7 @@
 
     <ol>
       <li>
-        In the text (or Java) editor, press <key>Ctrl</key>+<key>Shift</key>+<key>K</key> or select
+        In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>K</kbd> or select
         <span class="Label">Edit &gt; Find Previous</span> from the menu bar.
       </li>
 
