*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -19,6 +19,8 @@ JDT Core</h2>
     platform?</a></li>
   <li><a href="../guide/jdt_api_compile.htm">How do I programmatically compile a
     Java program?</a></li>
+  <li><a href="../guide/jdt_api_classpath.htm">How do I setup a project's 
+   classpath?</a></li>
   <li><a href="../guide/jdt_api_manip.htm">How do I manipulate
     Java code?</a></li>
   <li><a href="../guide/jdt_api_search.htm">How do I use the Java search 
