*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
@@ -8,7 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">JUnit&nbsp;</H1>
+<H1 CLASS="Head">JUnit</H1>
 
 <ul>
   <li>You can re-load your test code into a running VM by keeping the VM running 
