--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
@@ -15,15 +15,15 @@
   <li>By default, the run-time classpath for projects is the same as the build-time 
     classpath. You can change it by editing a Launch Configuration (Select <b>Run 
     &gt; Run</b> from the menu bar).</li>
-  <li>By default, thew Java builder moves all resources from you project to the 
+  <li>By default, the Java builder copies all resources from your project to the 
     build output folder (typically called 'bin'). You can exclude some resources 
-    and resource types by setting you preference in <b>Window &gt; Preferences 
+    and resource types by setting your preference in <b>Window &gt; Preferences 
     &gt; Compiler &gt; Other</b>.</li>
-  <li>You can put your files on the classpath without putting them in a source 
-    folder. 
+  <li>You can put your files on the classpath without placing them in a source 
+    folder: 
     <ul>
-      <li>Put them in a class folder by using <b>Java Build Path-&gt;Libraries-&gt;Advanced</b> 
-        on the project's <b>Properties</b></li>
+      <li>Put them in a class folder by using <b>Java Build Path &gt; Libraries 
+        &gt; Advanced</b> on the project's <b>Properties</b></li>
       <li>Alternatively, you can put them in a JAR and add the JAR to the classpath<b>.</b><br>
       </li>
     </ul>
