--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
@@ -4,22 +4,22 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Editor</title>
+<title>Java Editor</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Editor</H1>
-<P>&nbsp;</P>
+<H1 CLASS="Head">Java Editor</H1>
 <ul>
   <li>You can speed up typing by: 
     <ul>
-      <li>Turning off all before-compiling problem indication (unselect all checkboxes 
-        in <b>Window &gt; Preferences &gt; Java &gt; Editor &gt; Problem Indication</b>)</li>
-      <li>Hiding the overview ruler (undelect the <b>Window &gt; Preferences &gt; 
-        Java &gt; Editor &gt; Appearance &gt; Show overwier ruler</b> checkbox)</li>
-      <li>Turning off the editor -&gt; Outline synchronization (unselect the <b>Window 
+      <li>Turning off problem indicators that appear before compiling. Unselect 
+        all checkboxes in <b>Window &gt; Preferences &gt; Java &gt; Editor &gt; 
+        Problem Indication.</b></li>
+      <li>Hiding the overview ruler. Unselect the <b>Window &gt; Preferences &gt; 
+        Java &gt; Editor &gt; Appearance &gt; Show overwier ruler</b> checkbox.</li>
+      <li>Turning off the editor -&gt; Outline synchronization. Unselect the <b>Window 
         &gt; Preferences &gt; Java &gt; Editor &gt; Appearance &gt; Synchonize 
-        outline selection on cursor move</b>)</li>
+        outline selection on cursor move</b> checkbox.</li>
     </ul>
   </li>
   <li>You can turn off the tooltips by toggling off the <b>Show Text Hover</b> 
@@ -27,9 +27,9 @@
     is open).</li>
   <li>You can have your copyright notice generated for newly created Java files. 
     Edit the 'filecomment' template (or edit the 'typecomment' template if you 
-    need to customize the comment generated for each new type). Note: make sure 
-    that the appropriate checkbox(es) under <b>Window &gt; Preferences &gt; Java 
-    &gt; Code Generation</b> is/are selected.<br>
+    need to customize the comment generated for each new type). <b>Note:</b> make 
+    sure that the appropriate checkbox(es) under <b>Window &gt; Preferences &gt; 
+    Java &gt; Code Generation</b> is/are selected.<br>
   </li>
 </ul>
 <img src=" ../ngibmcpy.gif">
