*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -31,8 +31,8 @@
   <li>QuickFix can create method stubs. 
     <ul>
       <li>For example, type a method call <code>iDoNotExist();</code><br>
-        If you now press Ctrl+1, Eclipse will offer to create a stub for that 
-        method. </li>
+        If you now press <b>Ctrl+1</b>, Eclipse will offer to create a stub for 
+        that method. </li>
     </ul>
   </li>
   <li>QuickFix can create fields, local variables an dmethod parameters: 
@@ -53,9 +53,18 @@
     do one of the following: 
     <ul>
       <li>Select <b>Override Methods</b> from the type's pop-up menu or</li>
-      <li>Select <b>Source &gt; Override Method</b> from the menu bar.<br>
-      </li>
+      <li>Select <b>Source &gt; Override Method</b> from the menu bar.</li>
     </ul>
+  </li>
+  <li>You can get the local history of an individual method or field.<br>
+    Select a method or a field in the Outline or Hierarchy View and execute <b>Replace 
+    With &gt; Local history</b> from the pop-up menu. <br>
+    This will show you the history of this particular method or field and you 
+    can select which version should replace the one in the workspace.<br>
+  </li>
+  <li>Simliarly, you can add a deleted method or field by using the local history.<br>
+    Select a type in the Outline view and execute <b>Restore from Local History</b> 
+    from the pop-up menu. <br>
   </li>
 </ul>
 <p><img src="../ngibmcpy.gif"> </p>
