*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -64,7 +64,10 @@
   </li>
   <li>Simliarly, you can add a deleted method or field by using the local history.<br>
     Select a type in the Outline view and execute <b>Restore from Local History</b> 
-    from the pop-up menu. <br>
+    from the pop-up menu. </li>
+  <li>Single method parameters can be renamed like other local variables - by 
+    selecting in the editor and executing <b>Refactor &gt; Rename</b> from the 
+    menu bar or pop-up menu.<br>
   </li>
 </ul>
 <p><img src="../ngibmcpy.gif"> </p>
