--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -37,14 +37,14 @@ Default Settings</b>
 <!-- ------------------------- -->
 <Table border="1">
 <TR VALIGN="bottom">
-<TD ALIGN="left"><B>Key</B></TD>
-<TD ALIGN="left"><B>{Key} by itself</B></TD>
-<TD ALIGN="left"><B>SHIFT+{Key}</B></TD>
-<TD ALIGN="left"><B>CTRL+{Key}</B></TD>
-<TD ALIGN="left"><B>CTRL+SHIFT+{Key}</B></TD>
-<TD ALIGN="left"><B>ALT+SHIFT+{Key}</B></TD>
-<TD ALIGN="left"><B>ALT+{Key}</B></TD>
-<TD ALIGN="left"><B>CTRL+ALT+{Key}</B></TD>
+<th ALIGN="left">Key</th>
+<th ALIGN="left"><B>{Key} by itself</B></th>
+<th ALIGN="left"><B>SHIFT+{Key}</B></th>
+<th ALIGN="left"><B>CTRL+{Key}</B></th>
+<th ALIGN="left"><B>CTRL+SHIFT+{Key}</B></th>
+<th ALIGN="left"><B>ALT+SHIFT+{Key}</B></th>
+<th ALIGN="left"><B>ALT+{Key}</B></th>
+<th ALIGN="left"><B>CTRL+ALT+{Key}</B></th>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">A</TD>
@@ -702,24 +702,24 @@ Emacs Key Bindings</b>
 <div align="left">
 <Table border="1" height="2433" width="953">
 <TR VALIGN="bottom">
-<TD ALIGN="left" height="32" width="81"><B>Key</B></TD>
-<TD ALIGN="left" height="32" width="67"><B>{Key} by itself</B></TD>
-<TD ALIGN="left" height="32" width="80"><B>SHIFT+{Key}</B></TD>
-<TD ALIGN="left" height="32" width="76"><B>CTRL+{Key}</B></TD>
-<TD ALIGN="left" height="32" width="76"><B>ALT+{Key}</B></TD>
-<TD ALIGN="left" height="32" width="76"><b>Esc+{Key}</b></TD>
-<TD ALIGN="left" height="32" width="83"><b>ALT+SHIFT+</b>
+<th ALIGN="left" height="32" width="81"><B>Key</B></th>
+<th ALIGN="left" height="32" width="67"><B>{Key} by itself</B></th>
+<th ALIGN="left" height="32" width="80"><B>SHIFT+{Key}</B></th>
+<th ALIGN="left" height="32" width="76"><B>CTRL+{Key}</B></th>
+<th ALIGN="left" height="32" width="76"><B>ALT+{Key}</B></th>
+<th ALIGN="left" height="32" width="76"><b>Esc+{Key}</b></th>
+<th ALIGN="left" height="32" width="83"><b>ALT+SHIFT+</b>
   <br><b>{Key}</b>
-</TD>
-<TD ALIGN="left" height="32" width="92"><B>CTRL+SHIFT+</B>
+</th>
+<th ALIGN="left" height="32" width="92"><B>CTRL+SHIFT+</B>
   <br><B>{Key}</B>
-</TD>
-<TD ALIGN="left" height="32" width="79"><B>CTRL+ALT+</B>
+</th>
+<th ALIGN="left" height="32" width="79"><B>CTRL+ALT+</B>
   <br><B>{Key}</B>
-</TD>
-<TD ALIGN="left" height="32" width="82"><b>CTRL+X,</b>
-  <br><b>CTRL+{Key}</b></TD>
-<TD ALIGN="left" width="96" height="32"><b>CTRL+X,{Key}</b></TD>
+</th>
+<th ALIGN="left" height="32" width="82"><b>CTRL+X,</b>
+  <br><b>CTRL+{Key}</b></th>
+<th ALIGN="left" width="96" height="32"><b>CTRL+X,{Key}</b></th>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left" height="32" width="81">A</TD>
