fixed bogus path to images

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
@@ -10,7 +10,7 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
-<h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-160a.gif" width="463" height="307" alt="Parameters Page for the Extracting a local variable Refactoring Command"></h1>
+<h1 CLASS="Head"><img src="../images/tasks-160a.gif" width="463" height="307" alt="Parameters Page for the Extracting a local variable Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
   <p>Parameters Page for the Extracting a local variable Refactoring Command</p>
