--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
@@ -7,7 +7,7 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Property File page</h1>
-<img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-190a.gif" alt="Externalize Strings Property File page"/> 
+<img src="../images/tasks-190a.gif" alt="Externalize Strings Property File page"/> 
 <br>
 Externalize Strings Property File page 
 <ul>
