--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
@@ -10,7 +10,7 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
-<h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-32.gif" width="347" height="418" alt="Parameters Page for the Reordering method parameters Refactoring Command"></h1>
+<h1 CLASS="Head"><img src="../images/tasks-32.gif" width="347" height="418" alt="Parameters Page for the Reordering method parameters Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
   <p>Parameters Page for the Reordering method parameters Refactoring Command</p>
