--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
@@ -10,7 +10,7 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
-<h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-163a.gif" width="433" height="326" alt="Parameters Page for the Self Encapsulate Field Refactoring Command"></h1>
+<h1 CLASS="Head"><img src="../images/tasks-163a.gif" width="433" height="326" alt="Parameters Page for the Self Encapsulate Field Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
   <p>Parameters Page for the Self Encapsulate Field Refactoring Command</p>
