--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-166.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-166.htm
@@ -10,7 +10,7 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
-<h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-166a.gif" width="555" height="548" alt="Pulling members up to superclass Refactoring Command"></h1>
+<h1 CLASS="Head"><img src="../images/tasks-166a.gif" width="555" height="548" alt="Pulling members up to superclass Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
   <p>Parameters Page for the Pulling members up to superclass Refactoring Command</p>
