--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-170.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-170.htm
@@ -10,7 +10,7 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
-<h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-170a.gif" width="332" height="384" alt="Parameters Page for the Rename Field Refactoring Command"></h1>
+<h1 CLASS="Head"><img src="../images/tasks-170a.gif" width="332" height="384" alt="Parameters Page for the Rename Field Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
   <p>Parameters Page for the Rename Field Refactoring Command</p>
