--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
@@ -7,7 +7,7 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Key/value page</h1>
-<h1 class="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-189a.gif" width="507" height="708" alt="Externalize Strings Key/value page"></h1>
+<h1 class="Head"><img src="../images/tasks-189a.gif" width="507" height="708" alt="Externalize Strings Key/value page"></h1>
 <br>
 Externalize Strings Key/value page
 <ul>
